checking autodeploy commit

--- a/src/pages/sign-in/sign-in.hbs
+++ b/src/pages/sign-in/sign-in.hbs
@@ -1,6 +1,6 @@
 <div class='container container-content-centered'>
     <div class='paper'>
-          <p class="typography-centered typography-1 sign-in-form__title">Bxoд</p>
+          <p class="typography-centered typography-1 sign-in-form__title">Bxoд 1</p>
           <div class="sign-in-form__input-login">
             {{> textfield label="Логин" type="text" value="ivanivanov"}}
           </div>
