--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -11,3 +11,11 @@
     cursor: pointer;
     width: 100%;
 }
+.text-button {
+    color: #3369f3;
+    font-weight: 500;
+    font-size: 13px;
+    background: none;
+    border: none;
+    cursor: pointer;
+}
