--- a/src/components/text-field/text-field.hbs
+++ b/src/components/text-field/text-field.hbs
@@ -1,4 +1,4 @@
 <div class='text-field'>
-    <input class='text-field-input' type={{type}} value={{value}} />
+    <input class='text-field-input' type={{type}} value={{value}} name={{name}} />
     <label class='text-field-label'>{{label}}</label>
 </div>
