--- a/src/modules/profile/profile.hbs
+++ b/src/modules/profile/profile.hbs
@@ -1,4 +1,5 @@
 {{#>container }}
+    {{> navbar}}
     <div class="profile">
         {{> buttonGoBack onclick="navigate('/chat')" }}        
         <div class="profile__info">
