--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -13,6 +13,7 @@
 @import '../components/info-row/info-row.scss';
 @import '../components/avatar-large/avatar-large.scss';
 @import '../components/button-go-back/button-go-back.scss';
+@import '../components/navbar/navbar.scss';
 
 @import '../modules/sign-in/sign-in.scss';
 @import '../modules/sign-up/sign-up.scss';
