--- a/src/modules/change-profile/change-profile.hbs
+++ b/src/modules/change-profile/change-profile.hbs
@@ -1,4 +1,5 @@
 {{#>container }}
+    {{> navbar}}
     <div class="profile">
         {{> buttonGoBack onclick="navigate('/profile')" }}        
         <div class="profile__info">
