--- a/src/components/button-go-back/button-go-back.scss
+++ b/src/components/button-go-back/button-go-back.scss
@@ -1,7 +1,7 @@
 .button-go-back {
     width: 64px;
     height: 100%;
-    background: #fbfbfb;
+    background: $bgcolor_light_grey;
     display: flex;
     justify-content: center;
     align-items: center;
