--- a/src/components/divider/divider.hbs
+++ b/src/components/divider/divider.hbs
@@ -1,5 +1,5 @@
 {{#if horizontal}}
-    <div class='divider-horizontal'></div>
+    <div class='divider-horizontal divider-color'></div>
 {{else}}
-    <div class='divider-vertical'></div>
+    <div class='divider-vertical divider-color'></div>
 {{/if}}
