--- a/src/components/divider/divider.scss
+++ b/src/components/divider/divider.scss
@@ -1,11 +1,12 @@
 .divider-horizontal {
-    background-color: #eaeaea;
     width: 100%;
     height: 1px;
 }
 
 .divider-vertical {
-    background-color: #eaeaea;
     height: 100%;
     width: 1px;
+}
+.divider-color {
+    background-color: $border_color_grey;
 }
