--- a/src/components/link/link.scss
+++ b/src/components/link/link.scss
@@ -1,9 +1,9 @@
 .link {
     font-weight: 500;
     font-size: 11px;
-    color: #3369f3;
+    color: $color_primary;
     cursor: pointer;
 }
 .link::selection {
-    color: #3369f3;
+    color: $color_primary;
 }
