--- a/src/modules/profile/profile.scss
+++ b/src/modules/profile/profile.scss
@@ -37,7 +37,7 @@
             margin-top: 10px;
             margin-bottom: 10px;
             &:last-child {
-                color: #ff0000;
+                color: $color_error;
             }
         }
     }
