--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
+@import './theme.scss';
+
 @import '../components/typography/typography.scss';
 @import '../components/text-field/text-field.scss';
 @import '../components/button/button.scss';
