added modals: add-user/delete-user

--- a/src/components/navbar/navbar.hbs
+++ b/src/components/navbar/navbar.hbs
@@ -24,5 +24,11 @@
         <li>
             {{> link onclick="navigate('/error-500')" content="500 error"}}
         </li>
+        <li>
+            {{> link onclick="navigate('/add-user-modal')" content="Add user modal"}}
+        </li>
+        <li>
+            {{> link onclick="navigate('/delete-user-modal')" content="Delete user modal"}}
+        </li>
     </ul>
 </nav>
