--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -16,6 +16,8 @@
 @import '../components/avatar-large/avatar-large.scss';
 @import '../components/button-go-back/button-go-back.scss';
 @import '../components/navbar/navbar.scss';
+@import '../components/modal/modal.scss';
+@import '../modules/modal-add-user/modal-add-user.scss';
 
 @import '../modules/sign-in/sign-in.scss';
 @import '../modules/sign-up/sign-up.scss';
