--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -3,3 +3,5 @@ $color_grey: #999999;
 $color_error: #ff0000;
 $bgcolor_light_grey: #fbfbfb;
 $border_color_grey: #eaeaea;
+$bgcolor_white: #ffffff;
+$color_black: #1e1e1e;
