--- a/src/components/avatar-large/avatar-large.scss
+++ b/src/components/avatar-large/avatar-large.scss
@@ -15,3 +15,30 @@
 .change-avatar-input {
     display: none;
 }
+
+.avatar-block {
+    position: relative;
+    & > label > .select-img-text {
+        position: absolute;
+        background-color: rgba(0, 0, 0, 0.487);
+        top: 0;
+        right: 0;
+        border-radius: 50%;
+        width: 130px;
+        height: 130px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        color: $bgcolor_white;
+        font-size: 13px;
+        padding: 33px;
+        cursor: pointer;
+        display: none;
+    }
+    &:hover {
+        & > label > .select-img-text {
+            display: flex;
+        }
+    }
+}
