--- a/src/components/paper/paper.scss
+++ b/src/components/paper/paper.scss
@@ -1,7 +1,8 @@
 .paper {
-    background: #ffffff;
+    background: $bgcolor_white;
     box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.14);
     border-radius: 12px;
     padding: 50px 30px 30px;
     width: 340px;
+    opacity: 1;
 }
