--- a/src/components/typography/typography.scss
+++ b/src/components/typography/typography.scss
@@ -1,8 +1,13 @@
 .typography-1 {
-    color: black;
+    color: $color_black;
     font-weight: 500;
     font-size: 20px;
     line-height: 20px;
+}
+.typography-2 {
+    font-weight: 500;
+    font-size: 15px;
+    color: $color_black;
 }
 .typography-centered {
     text-align: center;
