--- a/src/modules/sign-in/sign-in.hbs
+++ b/src/modules/sign-in/sign-in.hbs
@@ -1,11 +1,11 @@
 {{> navbar}}
 {{#>container centered='true'}}
     {{#>paper}}
-        <form class="sign-in-form">
+        <form class="sign-in-form" onsubmit="event.preventDefault(); navigate('/chat')">
             {{> typography class="typography-1" content="Bxoд"}}
             {{> textfield label="Логин" type="text" value="ivanivanov" name='login'}}
             {{> textfield label="Пароль" type="password" value="ivanivanov" name='password'}}
-            {{> button onclick="navigate('/chat')" class='contained-button' content="Авторизоваться"}}
+            {{> button type='submit' class='contained-button' content="Авторизоваться"}}
             {{> link onclick="navigate('/sign-up')" content="Нет аккаунта?"}}
         </form>
     {{/paper}}
