--- a/src/modules/chat/chat.hbs
+++ b/src/modules/chat/chat.hbs
@@ -53,7 +53,7 @@
                 {{> message content="Круто!" fromMe='true'}}
         </div>
         {{> divider horizontal='true'}}
-        <div class="chat__messages__send-message-block">
+        <form class="chat__messages__send-message-block" onsubmit="event.preventDefault()">
             <div>
                 <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M7.18662 13.5L14.7628 5.92389L15.7056 6.8667L8.12943 14.4428L7.18662 13.5Z" fill="#999999"/>
@@ -66,14 +66,14 @@
                 </svg>
             </div>
             <input type='text' placeholder='Сообщение' name="message" />
-            <div>
+            <button type="submit">
                 <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <circle cx="14" cy="14" r="14" fill="#3369F3"/>
                     <rect x="8" y="13.2" width="11" height="1.6" fill="white"/>
                     <path d="M15 9L19 14L15 19" stroke="white" stroke-width="1.6"/>
                 </svg>
-            </div>
-        </div>
+            </button>
+        </form>
     </div>
 </div>
 {{/container}}
