--- a/src/modules/chat/chat.scss
+++ b/src/modules/chat/chat.scss
@@ -88,6 +88,11 @@
                 font-weight: 500;
                 text-align: center;
             }
+            button {
+                background: none;
+                border: none;
+                cursor: pointer;
+            }
         }
     }
 }
