--- a/src/modules/profile/profile.scss
+++ b/src/modules/profile/profile.scss
@@ -15,6 +15,9 @@
             justify-content: center;
             align-items: center;
         }
+        form {
+            width: 100%;
+        }
         &-rows {
             width: 100%;
             margin-bottom: 60px;
